--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/2-style.css
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/2-style.css
@@ -1,34 +1,38 @@
 .super-mario {
-    border: 3px solid red;
-    width: 100px;
-    left: 110px;
-    top: 100px;
-  }
-  
-  .goomba {
-    width: 100px;
-    position: absolute;
-    top: 400px;
-    left: 150px;
-  }
-  
-  .baloon {
-    position: absolute;
-    top: 250px;
-    left: 400px;
-  }
-  
-  .speach {
-    font-size: 25px;
-    position: absolute;
-    top: 290px;
-    left: 420px;
-    z-index: 2;
-  }
-  
-  .bowser {
-    width: 200px;
-    position: absolute;
-    top: 300px;
-    left: 700px;
-  }
+  /* border: 3px solid red; */
+  width: 200px;
+  position: absolute;
+  left: 100px;
+  top: 100px;
+}
+
+.goomba {
+  width: 100px;
+  /* border: 3px solid green; */
+  position: absolute;
+  left: 150px;
+  top: 400px;
+}
+.baloon {
+  position: absolute;
+  top: 250px;
+  left: 600px;
+  width: 200px;
+}
+
+.speach {
+  font-size: 15px;
+  position: absolute;
+  top: 280px;
+  left: 620px;
+  z-index: 2;
+}
+
+.bowser {
+  width: 400px;
+  /* border: 3px solid blue; */
+  position: absolute;
+  left: 800px;
+  top: 230px;
+
+}
