--- a/01-fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-1-dom-e-seletores/style.css
+++ b/01-fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-1-dom-e-seletores/style.css
@@ -8,7 +8,7 @@
 }
 
 #header-container {
-  color: black;
+  color: white;
   padding: 20px;
 }
 
@@ -23,7 +23,7 @@
   height: 198px;
 }
 .emergency-tasks h3 {
-  color: black;
+  color: white;
   margin-top: 10px;
   padding: 10px;
 }
@@ -39,7 +39,7 @@
 }
 
 .no-emergency-tasks h3 {
-  /* color: white; */
+  color: white; 
   margin-top: 10px;
   padding: 10px;
 }
