--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/academia-de-lógica/style.css
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/academia-de-lógica/style.css
@@ -17,7 +17,7 @@ main{
   display: block;
   text-align: center;
   height: 130px;
-  border: black 1px solid;
+  border: 1px solid black;
   margin-bottom: 25px;
 }
 
